--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
-
+import '../styles/global.css';
 const {pageTitle} = Astro.props;
 ---
 <html lang="en">
