--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import PageBody from '../components/PageBody.astro';
 import '../styles/global.css';
 const {pageTitle} = Astro.props;
 ---
@@ -13,6 +14,7 @@ const {pageTitle} = Astro.props;
 	</head>
 	<body>
         <Navigation />
+        <PageBody />
         <slot />
 	</body>
 </html>
