--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+
 import '@picocss/pico/css/pico.min.css';
+import 'lottie-web';
 ---
 <MainLayout = "Sign Up">
 </MainLayout>
