--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -3,9 +3,9 @@
 ---
 
 <form>
-    <input type="text" name="nome">
+    <input type="text" name="name">
     <input type="date" name="nascimento">
-    <input type="submit" value="OK">
+    <input type="submit" value="Submit">
 </form>
 
 <style>
