--- a/src/components/PageBody.astro
+++ b/src/components/PageBody.astro
@@ -2,17 +2,18 @@
 import Form from './Form.astro'
 ---
 
-<div class="body">
+<div id="body">
     <Form />
 </div>
-
+</div>
 <style>
-    .body {
+    #body {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 70vh;
-        width: 50vw;
+        height: 100%;
+        width: 40vw;
         margin-top: 10vh;
     }
+
 </style>
