--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -2,16 +2,16 @@
 import LottieAnimation from "astro-integration-lottie/Lottie.astro";
 ---
 
-<script src="https://cdnjs.com/libraries/bodymovin" type="text/javascript"></script>
-
 <div id="container">
-    <LottieAnimation src="/animation.json" autoplay="visible" />
+        <LottieAnimation src="/animation.json" autoplay="visible" />
 </div>
 
 <style>
     #container {
-        width: 50vw;
-        height: calc(100vh - 0.9em);
-        background-color: #fff;
+        width: 70vw;
+        height: 100%;
+        background-color: #eebed3;
+        border-left: 3px solid #583c50;
+        border-right: 3px solid #583c50;
     }
 </style>
