--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,12 +2,13 @@
 import Navigation from '../components/Navigation.astro';
 import PageBody from '../components/PageBody.astro';
 import PageImg from '../components/PageImg.astro';
+import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
 
 const {pageTitle} = Astro.props;
 ---
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -21,7 +22,12 @@ const {pageTitle} = Astro.props;
         <PageBody />
         <PageImg />
         <slot />
+        <Footer />
 	</body>
 </html>
 
-
+<style>
+    body{
+        height:100vh;
+    }
+</style>
