--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+:root {
+    --primary: #fdd835;
+  }
+
 *{
     margin: 0;
     padding: 0;
@@ -10,6 +14,7 @@
 html{
     min-height: 100%;
     width: 200vw;
+    overflow-y: hidden;
 }
 
 body{
