--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -4,10 +4,8 @@
 
 <form>
 
-    <!-- Grid -->
     <div class="grid">
   
-      <!-- Markup example 1: input is inside label -->
       <label for="firstname">
         First name
         <input type="text" id="firstname" name="firstname" placeholder="First name" required>
@@ -20,13 +18,26 @@
   
     </div>
   
-    <!-- Markup example 2: input is after label -->
     <label for="email">Email address</label>
     <input type="email" id="email" name="email" placeholder="Email address" required>
     <small>We'll never share your email with anyone else.</small>
+
+    <label for="phone">
+      Phone
+      <input type="text" id="phone" name="phone" placeholder="Phone" required>
+    </label>
+
+    <div class="grid">
   
-    <!-- Button -->
-    <button type="submit">Submit</button>
+    <label for="password">Password
+    <input type="password" id="password" name="password" placeholder="Password" required>
+  </label>
+    <label for="password">Confirm Password
+    <input type="password" id="password" name="password" placeholder="Password" required>
+  </label>
+  </div>
+  
+    <button type="submit">Create Account</button>
   
   </form>
 
@@ -34,4 +45,5 @@
     form{
         width: 400px;
     }
+
 </style>
