--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<form>
+<form class="custom-form">
 
     <div class="grid">
   
@@ -19,12 +19,12 @@
     </div>
   
     <label for="email">Email address</label>
-    <input type="email" id="email" name="email" placeholder="Email address" required>
+    <input type="email" id="email" name="email" placeholder="email@ayhaga.com" required>
     <small>We'll never share your email with anyone else.</small>
 
     <label for="phone">
       Phone
-      <input type="text" id="phone" name="phone" placeholder="Phone" required>
+      <input type="text" id="phone" name="phone" placeholder="01234567890" required pattern="^01[0125][0-9]{8}$" title="Please enter a valid phone number">
     </label>
 
     <div class="grid">
@@ -42,8 +42,60 @@
   </form>
 
 <style>
-    form{
-        width: 400px;
+    form.custom-form{
+        width: 350px;
+    }
+
+    form.custom-form label{
+        display: block;
+        margin-bottom: 5px;
+        font-size: 14px;
+    }
+
+    form.custom-form input{
+        width: 100%;
+        padding: 10px;
+        margin: 5px 0;
+        border: 2px solid #583c50;
+        border-radius: 4px;
+        box-sizing: border-box;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    form.custom-form input:focus{
+        outline: none;
+        border-color: #ee8fb8;
+    }
+
+    form.custom-form input::placeholder{
+        color: #bfbfbf;
+        font-size: 14px;
+    }
+
+    form.custom-form small{
+        display: block;
+        margin-top: 5px;
+        font-size: 12px;
+    }
+
+    form.custom-form button{
+        width: 100%;
+        background-color: #ee8fb8;
+        color: white;
+        padding: 10px;
+        margin: 5px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        height: 40px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    form.custom-form button:hover{
+        background-color: #db77a2;
     }
 
 </style>
