update button font size

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -92,6 +92,7 @@
         display:flex;
         justify-content: center;
         align-items: center;
+        font-size:14px;
     }
 
     form.custom-form button:hover{
