update form style

--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -9,7 +9,7 @@ import LottieAnimation from "astro-integration-lottie/Lottie.astro";
 <style>
     #container {
         width: 70vw;
-        height: 100%;
+        height: 200vh;
         background-color: #eebed3;
         border-left: 3px solid #583c50;
         border-right: 3px solid #583c50;
