--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -57,7 +57,7 @@
         width: 100%;
         padding: 10px;
         margin: 5px 0;
-        border: 2px solid #583c50;
+        border: 2px solid #292b2c;
         border-radius: 4px;
         box-sizing: border-box;
         height: 40px;
@@ -66,7 +66,7 @@
 
     form.custom-form input:focus{
         outline: none;
-        border-color: #ee8fb8;
+        border-color: #aac6fc;
     }
 
     form.custom-form input::placeholder{
@@ -82,7 +82,7 @@
 
     form.custom-form button{
         width: 100%;
-        background-color: #ee8fb8;
+        background-color: #77a3f9;
         color: white;
         padding: 10px;
         margin: 5px 0;
@@ -97,7 +97,7 @@
     }
 
     form.custom-form button:hover{
-        background-color: #db77a2;
+        background-color: #5d91f9;
     }
 
 </style>
