--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -1,7 +1,7 @@
 ---
 import LottieAnimation from "astro-integration-lottie/Lottie.astro";
 ---
-
+<svg id="visual" viewBox="0 0 100 600" width="100" height="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M29 600L29.2 585.7C29.3 571.3 29.7 542.7 34.5 514.2C39.3 485.7 48.7 457.3 53.2 428.8C57.7 400.3 57.3 371.7 54.5 343C51.7 314.3 46.3 285.7 41.5 257C36.7 228.3 32.3 199.7 34.7 171.2C37 142.7 46 114.3 51.7 85.8C57.3 57.3 59.7 28.7 60.8 14.3L62 0L100 0L100 14.3C100 28.7 100 57.3 100 85.8C100 114.3 100 142.7 100 171.2C100 199.7 100 228.3 100 257C100 285.7 100 314.3 100 343C100 371.7 100 400.3 100 428.8C100 457.3 100 485.7 100 514.2C100 542.7 100 571.3 100 585.7L100 600Z" fill="#f6e049"></path><path d="M74 600L70.5 585.7C67 571.3 60 542.7 58.3 514.2C56.7 485.7 60.3 457.3 64.3 428.8C68.3 400.3 72.7 371.7 74.2 343C75.7 314.3 74.3 285.7 74.3 257C74.3 228.3 75.7 199.7 75.5 171.2C75.3 142.7 73.7 114.3 69.7 85.8C65.7 57.3 59.3 28.7 56.2 14.3L53 0L100 0L100 14.3C100 28.7 100 57.3 100 85.8C100 114.3 100 142.7 100 171.2C100 199.7 100 228.3 100 257C100 285.7 100 314.3 100 343C100 371.7 100 400.3 100 428.8C100 457.3 100 485.7 100 514.2C100 542.7 100 571.3 100 585.7L100 600Z" fill="#aac6fc"></path></svg>
 <div id="container">
         <LottieAnimation src="/animation.json" autoplay="visible" />
 </div>
@@ -10,8 +10,8 @@ import LottieAnimation from "astro-integration-lottie/Lottie.astro";
     #container {
         width: 70vw;
         height: 200vh;
-        background-color: #eebed3;
-        border-left: 3px solid #583c50;
+        background-color: #aac6fc;
         border-right: 3px solid #583c50;
     }
+
 </style>
