create Waves component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import MainLayout from '../layouts/MainLayout.astro';
 
 import '@picocss/pico/css/pico.min.css';
 import 'lottie-web';
+import 'kute.js'
 ---
 <MainLayout = "Sign Up">
 </MainLayout>
