--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -32,8 +32,8 @@
     <label for="password">Password
     <input type="password" id="password" name="password" placeholder="Password" required>
   </label>
-    <label for="password">Confirm Password
-    <input type="password" id="password" name="password" placeholder="Password" required>
+    <label for="passwordC">Confirm Password
+    <input type="password" id="passwordC" name="passwordC" placeholder="Password" required>
   </label>
   </div>
   
