--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -44,7 +44,8 @@
 <style>
     form.custom-form{
         width:375px;
-        margin-top: 15vh;
+        margin-top: 12.5vh;
+        margin-left: 1.25vw
     }
 
     form.custom-form label{
