--- a/src/components/Waves.astro
+++ b/src/components/Waves.astro
@@ -29,9 +29,8 @@ import KUTE from 'kute.js'
     </g>
 </svg>
 
-<script
-import KUTE from "kute.js"
->
+<script>
+    import KUTE from 'kute.js'
     const wave1A = document.getElementById('wave1A')
     const wave1B = document.getElementById('wave1B')
     const wave2A = document.getElementById('wave2A')
