--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -13,5 +13,7 @@ import Waves from "./Waves.astro";
         height: 200vh;
         background-color: #aac6fc;
         border-right: 3px solid #583c50;
+        transform: translateX(-1vh);
+        z-index: 1;
     }
 </style>
