--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -45,7 +45,7 @@
     form.custom-form{
         width:375px;
         margin-top: 12.5vh;
-        margin-left: 1.25vw
+        margin-left: 1.25vw;
     }
 
     form.custom-form label{
@@ -58,11 +58,14 @@
         width: 100%;
         padding: 10px;
         margin: 5px 0;
-        border: 2px solid #292b2c;
+        /* border: 2px solid #292b2c; */
         border-radius: 4px;
         box-sizing: border-box;
         height: 40px;
         font-size: 14px;
+        background-color: #f8f8f8;
+        box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+        /* color: #fdfdfd; */
     }
 
     form.custom-form input:focus{
