--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -98,6 +98,7 @@
         justify-content: center;
         align-items: center;
         font-size:14px;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
 
     form.custom-form button:hover{
