add border on form focus

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -70,6 +70,7 @@
 
     form.custom-form input:focus{
         outline: none;
+        border: 2px solid #aac6fc;
         border-color: #aac6fc;
     }
 
