--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -29,7 +29,7 @@
 
     li a {
         color: #415462;
-        font-family: 'Spectral SC', serif;
+        font-family: 'Koulen', serif;
     }
 
     li a:hover {
@@ -39,7 +39,7 @@
     }
 
     .logo-txt{
-        font-family: 'Spectral SC', serif;
+        font-family: 'Libre Barcode 39 Extended Text', serif;
         font-size: 1.5em;
         font-weight: 300;
         text-decoration: none;
@@ -51,8 +51,4 @@
         text-decoration:none;
     }
 
-</style>
-
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Spectral+SC:wght@300&display=swap');
 </style>
