--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -1,5 +1,6 @@
 ---
 import LottieAnimation from "astro-integration-lottie/Lottie.astro";
+import Rellax from "../scripts/rellax.min.js";
 import Waves from "./Waves.astro";
 ---
 
@@ -12,7 +13,7 @@ import Waves from "./Waves.astro";
     <LottieAnimation src="/speaker-animation.json" autoplay="visible" />
     <LottieAnimation src="/animation.json" autoplay="visible" />
 </div> -->
-<img id="floating-img2" src="/3d-woman-man.webp">
+<img id="floating-img2" src="/3d-woman-man.webp" class="rellax">
 <style>
     #container {
         width: 70vw;
@@ -57,3 +58,13 @@ import Waves from "./Waves.astro";
         z-index: 2;
     }
 </style>
+
+<script
+import Rellax from "rellax";
+>
+    import Rellax from "../scripts/rellax.min.js";
+    var rellax = new Rellax('.rellax', {
+      horizontal:true,
+      vertical:false
+    });
+</script>
