--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -59,10 +59,8 @@ import Waves from "./Waves.astro";
     }
 </style>
 
-<script
-import Rellax from "rellax";
->
-    import Rellax from "../scripts/rellax.min.js";
+<script src="../scripts/rellax.min.js"></script>
+<script type="module">
     var rellax = new Rellax('.rellax', {
       horizontal:true,
       vertical:false
