--- a/src/components/Waves.astro
+++ b/src/components/Waves.astro
@@ -137,4 +137,7 @@ import KUTE from "kute.js";
     #Waves-Right {
         transform: translateX(-1vw);
     }
+    #Waves-Right, #visual {
+        z-index:-1;
+    }
 </style>
