update circular txt text

--- a/src/components/CircularText.astro
+++ b/src/components/CircularText.astro
@@ -19,7 +19,7 @@
       </defs>
       <text width="400">
         <textPath alignment-baseline="auto" xlink:href="#circle" class="text">
-          Part of a heart-healthy breakfast...sorta! -
+          Elform top eltop ...Sign Up yala mestany eh! -
         </textPath>
       </text>
     </svg>
