update circular txt hover

--- a/src/components/CircularText.astro
+++ b/src/components/CircularText.astro
@@ -35,6 +35,10 @@
       fill: #111;
       /* text-shadow: 2px 0px #ccc; */
     }
+    .text:hover{
+        fill: #555;
+        cursor: pointer;
+    }
 
     #rotatingText {
       animation-name: rotate-circle;
@@ -69,4 +73,5 @@
 
       /* filter: drop-shadow(0px 0px 5px #333); */
     }
+
   </style>
