--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -4,6 +4,7 @@ import Rellax from "../scripts/rellax.min.js";
 
 import Waves from "./Waves.astro";
 import CircularText from "./CircularText.astro";
+import TextAnimation from "./TextAnimation.astro";
 ---
 
 <Waves>
@@ -16,6 +17,7 @@ import CircularText from "./CircularText.astro";
     <LottieAnimation src="/animation.json" autoplay="visible" />
 </div> -->
 <img id="floating-img2" src="/3d-woman-man.webp" class="rellax" data-rellax-speed="3" data-rellax-zindex="5">
+<TextAnimation />
 <div id="circular-text">
     <CircularText />
 </div>
