--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,3 +7,10 @@ import 'kute.js'
 ---
 <MainLayout = "Sign Up">
 </MainLayout>
+
+<script>
+	window.addEventListener('load', () => {
+    const loader = document.getElementById('loader');
+    loader.style.display = 'none';
+	});
+</script>
