--- a/src/components/Loader.astro
+++ b/src/components/Loader.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div id="loading" class="spinner">
+<div id="loader" class="spinner">
     <div class="bounce1"></div>
     <div class="bounce2"></div>
     <div class="bounce3"></div>
