--- a/src/components/Loader.astro
+++ b/src/components/Loader.astro
@@ -10,9 +10,11 @@
 
   <style>
     .spinner {
-  margin: 100px auto 0;
-  width: 70px;
-  text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 70px;
+        text-align: center;
 }
 
 .spinner > div {
