--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,6 @@ import 'kute.js'
 	window.addEventListener('load', () => {
     const loader = document.getElementById('loader');
     loader.style.display = 'none';
+    document.body.style.overflowX = 'auto';
 	});
 </script>
