update overflow onload

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -30,6 +30,7 @@ const {pageTitle} = Astro.props;
 <style>
     body{
         height:100vh;
+		overflow-y: hidden;
 		overflow-x: hidden;
     }
 </style>
