--- a/src/components/Loader.astro
+++ b/src/components/Loader.astro
@@ -10,9 +10,9 @@
 
   <style>
     .spinner {
-        position: absolute;
-        top: 50%;
-        left: 50%;
+        position: fixed;
+        top: 47.5%;
+        left: 47.5%;
         width: 70px;
         text-align: center;
 }
