--- a/src/components/TextAnimation.astro
+++ b/src/components/TextAnimation.astro
@@ -25,6 +25,7 @@ import anime from '../scripts/anime.es.js';
     }
     </style>
 
+<!-- not working lol -->
 <script type="module">
     anime.timeline({loop: true})
   .add({
