--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+import '../scripts/script.js';
 
 import '@picocss/pico/css/pico.min.css';
 import 'lottie-web';
