--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -9,14 +9,14 @@ import TextAnimation from "./TextAnimation.astro";
 
 <Waves>
     <div id="container">
-        <img id="shopping-cart" src="../assets/shopping-cart.webp">
+        <img id="shopping-cart" src="/src/assets/shopping-cart.webp">
     </div>
 </Waves>
 <!-- <div id="floating-container-animation">
     <LottieAnimation src="/speaker-animation.json" autoplay="visible" />
     <LottieAnimation src="/animation.json" autoplay="visible" />
 </div> -->
-<img id="floating-img2" src="../assets/3d-woman-man.webp" class="rellax" data-rellax-speed="3" data-rellax-zindex="5">
+<img id="floating-img2" src="/src/assets/3d-woman-man.webp" class="rellax" data-rellax-speed="3" data-rellax-zindex="5">
 <div id="text-animation">
     <TextAnimation />
 </div>
