update img component

--- a/src/components/PageImg.astro
+++ b/src/components/PageImg.astro
@@ -9,7 +9,7 @@ import TextAnimation from "./TextAnimation.astro";
 
 <Waves>
     <div id="container">
-        <img id="shopping-cart" src="/src/assets/scooter.webp">
+        <img id="shopping-cart" src="/src/assets/shopping-cart.webp">
     </div>
 </Waves>
 <!-- <div id="floating-container-animation">
