--- a/src/components/CircularText.astro
+++ b/src/components/CircularText.astro
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@600&display=swap" rel="stylesheet">
 
 <div class="main">
-    <img src="/src/assets/barcode.svg" width="50" height="50">
+    <img src="/assets/barcode.svg" width="50" height="50">
     <svg id="rotatingText" viewBox="0 0 200 200" width="200" height="200">
       <defs>
         <path id="circle" d="M 100, 100
