--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
 import '../scripts/script.js';
+import '../scripts/rellax.min.js';
 
 import '@picocss/pico/css/pico.min.css';
 import 'lottie-web';
