--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,6 +15,7 @@ const {pageTitle} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/assets/barcode.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<script src="../scripts/rellax.min.js" defer></script>
 		<title>{pageTitle}</title>
 	</head>
 	<body>
